Fix some styling to avoid overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -130,17 +130,22 @@ dialog[open]::backdrop {
   border-radius: 12px;
   margin: 10px;
   border: 1px solid black;
+
+
 }
 
 .projSelfBtn {
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: flex-start;
   align-items: center;
-  gap: 10px;
+  gap: 10px; */
   font-size: 1.5rem;
   background-color:bisque;
   border: none; 
-  width: 100%
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 200px;
 }
 .add-project-btn:hover {
   filter: invert(0.2);
@@ -152,6 +157,7 @@ dialog[open]::backdrop {
 
 .projSelfBtn:hover {
   color: red;
+
 }
 
 
@@ -169,7 +175,10 @@ dialog[open]::backdrop {
   width: calc(100% - 50px);
   min-width: 200px;
 
-}
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+ }
 
 #proj-desc {
   font-size: 1rem;
@@ -222,10 +231,12 @@ dialog[open]::backdrop {
   align-items: flex-start;
   justify-content: flex-start;
   gap: 5px;
-  min-width: 500px;
-  width: calc(100% - 200px);
+  min-width: 300px;
+  width: calc(100% - 50px);
+  max-width: 1000px;
   background-color:bisque;
   border-radius: 15px;
+  
 }
 
 .task-title-div {
@@ -234,8 +245,12 @@ dialog[open]::backdrop {
   align-items: flex-start;
   justify-content: flex-start;
   margin: 5px;
-  width: 99%;
   background-color:bisque;
+  width: calc(100% - 10px);
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+
 }
 
 
@@ -284,6 +299,10 @@ dialog[open]::backdrop {
   text-align: left;
   border: none;
   cursor: pointer;
+
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .to-do-title:hover {
